# mcp-server-blueprint

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/mcp_server_blueprint/: config.py  descriptions.py  errors.py  main.py  params.py  prompts.py  resources.py  server.py  shared.py  tools.py
src/mcp_server_blueprint/infrastructure/: __init__.py  http_client.py
tests/: conftest.py  test_config.py  test_main.py  test_mcp_tools.py  test_params.py  test_prompts.py  test_resources.py  test_server.py  test_shared.py  test_tools.py
