[project]
name = "mcp-server-blueprint"
version = "0.0.1"
description = "MCP server blueprint that bridges REST APIs to the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
mcp-server-blueprint = "mcp_server_blueprint.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_server_blueprint --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/mcp_server_blueprint"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
